# RO02-TP-Topics-Quiz

./: .gitconfig
.theia/: recentworkspace.json  settings.json
catkin_ws/devel/lib/pkgconfig/: my_examples_pkg.pc
catkin_ws/devel/share/my_examples_pkg/cmake/: my_examples_pkgConfig.cmake
catkin_ws/src/topics_quiz/: CMakeLists.txt  package.xml
catkin_ws/src/topics_quiz/src/: my_script.py
